--- a/package.json
+++ b/package.json
@@ -51,5 +51,5 @@
   "devDependencies": {
     "sass": "^1.54.9"
   },
-    "homepage": "https://st-daniel-h.github.io/facebook/",
+    "homepage": "https://st-daniel-h.github.io/facebook/"
 }
